products-service/products/src/main/java/com/example/products/errors/exceptions/ingredientExceptions/IngredientNotFound.java
package com.example.products.errors.exceptions.ingredientExceptions;

public class IngredientNotFound extends RuntimeException
{
    public IngredientNotFound(String message)
    {
        super(message);
    }
}
